--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -222,9 +222,6 @@ LastLevel=/Game/Untitled
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/21_Collision/NE_021_CollisionEvent.NE_021_CollisionEvent
-OpenAssetsAtExit=/Game/21_Collision/NE_021_CollisionEvent_System.NE_021_CollisionEvent_System
-OpenAssetsAtExit=/Game/21_Collision/NE_021_CollisionEvent_02.NE_021_CollisionEvent_02
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1414,9 +1411,9 @@ WmfMediaSettings=True
 InternationalizationSettingsModel=True
 
 [RootWindow]
-ScreenPosition=X=2916.000 Y=492.000
-WindowSize=X=1298.000 Y=738.000
-InitiallyMaximized=True
+ScreenPosition=X=2885.333 Y=483.333
+WindowSize=X=1301.333 Y=741.333
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
